2020-04-18 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.8

2020-01-06 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.7

2019-09-07 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.6

2019-04-04 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.5

2019-03-20 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.4

2018-10-31 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.3

2018-09-14 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.2

2018-09-07 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.1

2018-05-23 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.9.0
	* PRE_BUILD, update-compilers.patch: removed

2018-02-26 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: PATCHLEVEL++
	* BUILD: added true command
	* PRE_BUILD, update-compilers.patch: added slightly modified upstream
	  patch to fix compilation of dependent projects with gcc 7.3.x

2017-08-16 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.8.5

2017-01-22 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.8.4

2016-11-12 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.8.3

2016-11-05 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.8.2

2015-05-25 Thomas Orgis <sobukus@sourcemage.org>
	* DETAILS: remove SOURCEFORGE_URL usage (automated)

2015-04-30 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: version 0.9.6.3

2012-08-12 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS, BUILD, INSTALL: spell created, version 0.9.3.4