@@ -1,3 +1,13 @@
 rm glm/CMakeLists.txt &&
 install -vm 755 -d "$INSTALL_ROOT/usr/include/glm" &&
-cp -r glm "$INSTALL_ROOT/usr/include" 
+cp -r glm "$INSTALL_ROOT/usr/include" &&
+
+cd "${SPELL_DIRECTORY}" &&
+
+sed -e "s:@CMAKE_INSTALL_PREFIX@:$INSTALL_ROOT/usr:"              \
+    -e "s:@GLM_VERSION@:$VERSION:"                                \
+    "${SPELL_DIRECTORY}"/glm.pc.in > "${SOURCE_DIRECTORY}/glm.pc" &&
+
+if [[ -f "${SOURCE_DIRECTORY}/glm.pc" ]]; then
+  install -D "${SOURCE_DIRECTORY}/glm.pc" "${INSTALL_ROOT}/usr/lib/pkgconfig/glm.pc"
+fi
