@@ -1,3 +1,7 @@
+2023-08-31 Conner Clere <xenanthropy@sourcemage.org>
+	* glm.pc.in: added, glm pkgconfig file
+	* INSTALL: added install for glm pkgconfig file
+
 2020-04-18 Florian Franzmann <bwlf@bandrate.org>
 	* DETAILS: version 0.9.9.8
 
